infrastructure/k8s/overlays/production/replica-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: garlaws-app
spec:
  replicas: 5
